--- a/src/main/resources/click-page.properties
+++ b/src/main/resources/click-page.properties
@@ -1,4 +1,6 @@
 application-title=Piggydb
+RestorePage-import=Import from XML file
+RestorePage-fragment-imported=Fragment has been imported.
 url-portal-site=http://piggydb.net/
 url-piggydb-blog=http://piggydb.wordpress.com/
 url-piggydb-twitter=http://twitter.com/marubinotto
